--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+  <div class="navbar mb-2 shadow-lg bg-neutral text-neutral-content rounded-box">
+    <div class="flex-none px-2 mx-2">
+      <span class="text-lg font-bold">Mod X Change</span>
+    </div>
+    <div class="flex-1 px-2 mx-2">
+      <div class="items-stretch hidden lg:flex">
+        <a class="btn btn-ghost btn-sm rounded-btn" href="#exchange">Exchanges</a>
+        <a class="btn btn-ghost btn-sm rounded-btn" href="#card-flip">Card Flip</a>
+      </div>
+    </div>
+  </div>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
