edit ui and format code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,8 +9,23 @@
 </head>
 
 <body>
-  <div id="navbar"></div>
-  <div id="app"></div>
+  <div class="drawer h-screen">
+    <input id="my-drawer" type="checkbox" class="drawer-toggle" />
+    <div class="drawer-content">
+      <!-- content -->
+      <div id="navbar"></div>
+      <div id="app"></div>
+    </div>
+    <!-- side-bar -->
+    <div class="drawer-side">
+      <label for="my-drawer" class="drawer-overlay"></label>
+      <ul class="menu p-4 overflow-y-auto w-80 bg-base-100 text-base-content">
+        <!-- Sidebar content here -->
+        <li><a>Sidebar Item 1</a></li>
+        <li><a>Sidebar Item 2</a></li>
+      </ul>
+    </div>
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
