add date and time function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content">
       <!-- content -->
-      <div id="navbar"></div>
+      <!-- <div id="navbar"></div> -->
       <div id="app"></div>
     </div>
     <!-- side-bar -->
